--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,16 @@
-html,
-body {
+* {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+:root {
+  --color-primary-1: #1d9bf0;
+  --color-primary-1-hidden: #1d9bf025;
+}
+
+html,
+body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -11,16 +20,84 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+.pages {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  min-height: 100vh;
+  overflow: hidden;
+  flex-direction: column;
+  position: relative;
+  margin: -.5em 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.pages h2 {
+  padding: 1em 1.5em;
+  font-size: 3em;
+  color: #fff;
+  background-color: var(--color-primary-1-hidden);
+  border-radius: 30px;
+  margin: 1.5em 0 1em;
+  box-shadow: 0 10px 20px #3335;
+  z-index: 1;
+  background: linear-gradient(320deg, #36D8FF, #f5f8fa, #00ACEE, #ddd, #36D8FF, #f5f8fa, #00ACEE);
+  background-size: 400% 400%;
+  animation: buttonGradient 45s ease infinite;
+  backdrop-filter: blur(20px);
+}
+
+.pages .notifications-h2 {
+  background: linear-gradient(320deg, #ffa1ff, var(--color-primary-1), #ffffff80, var(--color-primary-1), #ffa1ff, var(--color-primary-1), #ffffff80);
+  background-size: 400% 400%;
+  animation: buttonGradient 45s ease infinite;
+}
+
+.pages .explore-h2 {
+  background: linear-gradient(320deg, #7864e1, #f5f8fa, #00ACEE, #fff9, #7864e1, #f5f8fa, #00ACEE);
+  background-size: 400% 400%;
+  animation: buttonGradient 45s ease infinite;
+}
+
+@keyframes buttonGradient {
+  0% {
+    background-position: 0% 50%
   }
-  body {
-    color: white;
-    background: black;
+
+  50% {
+    background-position: 100% 50%
+  }
+
+  100% {
+    background-position: 0% 50%
+  }
+}
+
+.pages p {
+  font-size: 2em;
+  color: #fff;
+
+  z-index: 1;
+
+}
+
+.pages picture {
+  width: 100%;
+  position: absolute;
+  z-index: 0;
+  height: 100%;
+  object-fit: cover;
+}
+
+.pages img {
+  width: 100%;
+  z-index: 0;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+@media (max-width:650px) {
+  .pages h2 {
+    font-size: 2em;
   }
 }
