--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,3 +101,62 @@ a {
     font-size: 2em;
   }
 }
+
+/* loader tweet */
+
+.container-2 {
+  display: flex;
+  width: 90%;
+  padding: 1em .5em;
+}
+
+.loader {
+  display: grid;
+  height: 5rem;
+  width: 40rem;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: auto 1fr;
+  padding: 0.75rem;
+  gap: 15px 20px;
+}
+
+.circle {
+  grid-row: 1 / 3;
+  grid-column: 1 / 2;
+
+  height: 100%;
+  aspect-ratio: 1;
+
+  border-radius: 50%;
+}
+
+.bar {
+  border-radius: 1rem;
+}
+
+.bar:not(.short) {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+}
+
+.bar.short {
+  grid-row: 2 / 3;
+  gird-column: 2 / 3;
+
+  width: 75%;
+}
+
+/* Animation */
+@keyframes pulse {
+  from {
+    background-color: #dddddd;
+  }
+
+  to {
+    background-color: #eeeeee;
+  }
+}
+
+.loader>* {
+  animation: pulse 700ms infinite alternate;
+}
